# preprocess

./: .gitignore  .gitmodules  CMakeLists.txt  FindICU.cmake  Jamroot  LICENSE  README.md  compile_truecase.sh  sanity.jam
.github/workflows/: ubuntu.yml
moses/: CMakeLists.txt
moses/ems/support/: split-sentences-base64documents.perl  split-sentences.perl
preprocess/: CMakeLists.txt  Jamfile  apply_case_main.cc  b64filter_main.cc  base64.cc  base64.hh  base64_number_main.cc  batch_dedupe_main.cc  cache_main.cc  captive_child.cc  captive_child.hh  commoncrawl_dedupe_main.cc  dedupe.cc  dedupe_custom_main.cc  dedupe_main.cc  docenc_main.cc  fields.cc  fields.hh  foldfilter_main.cc  gigaword_extract.sh  gigaword_unwrap.cc  gigaword_unwrap_main.cc  heuristics.pl  idf_main.cc  latency_main.cc  mmhsum_main.cc  order_independent_hash_main.cc  parallel.hh  preprocess.pl  process_unicode.cc  process_unicode_main.cc  remove_invalid_utf8_base64_main.cc  remove_invalid_utf8_main.cc  remove_long_lines.cc  remove_long_lines_main.cc  resplit.sh  select_latin.cc  select_latin_main.cc  shard_main.cc  simple_cleaning_main.cc  (+15 more)
preprocess/tests/: run.sh  vars
preprocess/tests/cache/: input  run.sh  space_expected  space_ref.py
preprocess/tests/dedupe/: columns  columns.out  expected  ref.py  run.sh
preprocess/tests/foldfilter/: fold10.expected  run.sh
preprocess/tests/shard/: run.sh
util/: CMakeLists.txt  Jamfile  buffered_stream.hh  compress.cc  compress.hh  compress_test.cc  compressed_file_stream.hh  exception.cc  exception.hh  fake_ofstream.hh  file.cc  file.hh  file_piece.cc  file_piece.hh  file_piece_test.cc  file_stream.hh  fixed_array.hh  have.hh  mmap.cc  mmap.hh  mutable_vocab.cc  mutable_vocab.hh  mutable_vocab_test.cc  object_pool.hh  pcqueue.hh  pcqueue_test.cc  probing_hash_table.hh  scoped.hh  string_piece.cc  string_piece.hh  string_piece_hash.hh  string_stream.hh  threaded_buffered_stream.hh  utf8.cc  utf8.hh  utf8_icu.cc  utf8_icu.hh  utf8_test.cc
util/double-conversion/: CMakeLists.txt  fixed-dtoa.cc  utils.h
